[package]
name = "intelligencce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
serde_yaml = { version = "0.9.10" }
regex = { version = "1.6.0" }
redis = { version = "0.21.6", features = ["tokio-comp"] }
tokio = { version = "1.21.0", features = ["full"] }