[package]
name = "intelligencce-templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = { version = "2.1.0" }                           # Human-readable times
reqwest = { version = "0.11.11", features = ["blocking"] }  # HTTP requests
serde = { version = "1.0.144", features = ["derive"] }      # (De)serialization
serde_json = { version = "1.0.85" }                         # JSON (de)serialization
serde_yaml = { version = "0.9.10" }                         # YAML (de)serialization
regex = { version = "1.6.0" }                               # Regular expressions
redis = { version = "0.21.6", features = ["tokio-comp"] }   # Redis client
tokio = { version = "1.21.0", features = ["full"] }         # Async runtime